--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -147,6 +147,9 @@
   <data name="EnableBGToast" xml:space="preserve">
     <value>Επιλέξτε "Συνέχεια" για την αποστολή θέση στις Ρυθμίσεις</value>
   </data>
+  <data name="Fixed" xml:space="preserve">
+    <value>Φτιάχτηκε</value>
+  </data>
   <data name="ForgetPasswordText" xml:space="preserve">
     <value>Ξέχασα τον κωδικό μου</value>
   </data>
