--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -282,4 +282,10 @@
   <data name="UserNameText" xml:space="preserve">
     <value>Name</value>
   </data>
+  <data name="WelcomeText" xml:space="preserve">
+    <value>Welcome </value>
+  </data>
+  <data name="WelcomeText_2" xml:space="preserve">
+    <value>Choose how to continue</value>
+  </data>
 </root>
