--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -184,7 +184,7 @@
     <value>Αρχή</value>
   </data>
   <data name="InstructionsMessage" xml:space="preserve">
-    <value>Είναι εύκολο. Διάλεξε από τις κατηγορίες που φαίνονται παρακάτω τι θέλεις να καταγγείλεις πατώντας το αντίστοιχο κουμπί, φωτογράφισε το και στείλε το</value>
+    <value>Είναι εύκολο και εντελώς ανώνυμο. Διάλεξε από τις κατηγορίες που φαίνονται παρακάτω τι θέλεις να αναφέρεις πατώντας το αντίστοιχο κουμπί, φωτογράφισέ το και ανάρτησέ το. Τα στοιχεία σου δεν θα εμφανιστούν πουθενά</value>
   </data>
   <data name="InvalidEntryStyle" xml:space="preserve">
     <value>InvalidEntryStyle</value>
