--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -360,4 +360,13 @@
   <data name="ContinueText" xml:space="preserve">
     <value>Continue</value>
   </data>
+  <data name="ExitText" xml:space="preserve">
+    <value>Exit</value>
+  </data>
+  <data name="PermissionsNotGrandedText" xml:space="preserve">
+    <value>If notifications are not allowed the app will not run </value>
+  </data>
+  <data name="TokenExpiredText" xml:space="preserve">
+    <value>Token Expired</value>
+  </data>
 </root>
